[package]
name = "olaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { path = "../curve25519-dalek/curve25519-dalek", default-features = false, features = [
    "digest",
    "rand_core",
    "zeroize",
] }
ed25519 = "2.2"
ed25519-dalek = { path = "../curve25519-dalek/ed25519-dalek", features = [
    "hazmat",
    "rand_core",
] }
blake2 = "0.10.6"
merlin = { version = "3", default-features = false }
rand_core = { version = "0.6.4", default-features = false, features = [
    "getrandom",
] }
serde = { version = "1.0", default-features = false }
zeroize = { version = "1.7", default-features = false }
rand = "0.8"
